--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,11 +6,11 @@ layout: default
 
   <h1 class="page-heading">Recent Posts</h1>
 
-  <a href="https://joshuarrrr.github.io/hubpress.io/2017/01/18/Portfolio-Sites-for-Non-coding-Journalists.html">Portfolio Sites for Non-coding Journalists</a>
+<!--   <a href="https://joshuarrrr.github.io/hubpress.io/2017/01/18/Portfolio-Sites-for-Non-coding-Journalists.html">Portfolio Sites for Non-coding Journalists</a> -->
   
   {{ content }}
 
-  <!-- <ul class="post-list">
+  <ul class="post-list">
     {% for post in site.posts %}
       <li>
         <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
@@ -20,7 +20,7 @@ layout: default
         </h2>
       </li>
     {% endfor %}
-  </ul> -->
+  </ul>
 
   <!-- <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p> -->
 
