add a blog listing page

--- a/_includes/titleband.html
+++ b/_includes/titleband.html
@@ -38,7 +38,7 @@
 		  </div>
 		  <div class="box big-box">
 		  	<div class="box-inner">
-		  		<h2><a href="">Blog Posts</a></h2>
+		  		<h2><a href="/blog/">Blog Posts</a></h2>
 		  		{% if page.url == "/" %}
 		  		<div>
 			  		  <ul class="tilt-post-list">
