--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -116,6 +116,7 @@ transform-origin: top left;
   .box-inner {
     box-sizing: border-box;
     border: 3px solid $color2;
+    border-radius: 1em;
     padding: 1em;
     margin: .75em 1em;
     display: inline-block;
@@ -142,7 +143,7 @@ transform-origin: top left;
   left: 25%;
 
   .big-box .box-inner {
-    width: 66vw;
+    max-width: 66vw;
   }
 
   .tree-right {
