--- a/_includes/titleband.html
+++ b/_includes/titleband.html
@@ -33,7 +33,7 @@
 	<div class="tree-right">
 		  <div class="box">
 		  	<div class="box-inner">
-		  		<h2><a href="/fellowship/">Fellowship</a></h2>
+		  		<h2><a href="/fellowship/"><small>The Shadow</small>Fellowship</a></h2>
 		  	</div>
 		  </div>
 		  <div class="box big-box">
