--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -2,6 +2,10 @@ a:visited {
   color: $brand-color;
 }
 
+a:hover {
+  cursor: pointer;
+}
+
 .footer-col-1 {
   text-align: left;
   width: -webkit-calc(33% - (#{$spacing-unit} / 2));
@@ -111,6 +115,11 @@ transform-origin: top left;
       text-shadow: -1px 1px 8px $color3, 1px -1px 8px $color1;
       text-decoration: none;
     }
+
+    small {
+      display: block;
+      font-size: .6em
+    }
   }
 
   .box-inner {
@@ -151,4 +160,48 @@ transform-origin: top left;
     top: 0;
     transform-origin: top left;
   }
+}
+
+.tilt-post-meta {
+  // color: darken($text-color,10%)
+  font-size: .7em;
+}
+
+.post-meta {
+  color: $text-color;
+}
+
+.post .post-meta {
+  text-align: right;
+}
+
+.post .post-meta time {
+  transform: rotate(-90deg);
+  position: relative;
+  transform-origin: bottom right;
+  display: inline-block;
+  right: -3em;
+  top: 2.5em;
+  text-transform: uppercase;
+}
+
+.tilt-post-list {
+  a:hover {
+    text-decoration: none;
+    text-shadow: -1px 1px 8px $color3, 1px -1px 8px $color1;
+  }
+}
+
+.post-title, .page-heading {
+  font-family: 'Righteous', sans-serif;
+  text-transform: uppercase;
+  line-height: 1em;
+  text-align: center;
+  color: $color4;
+  font-size: 2.6em;
+  letter-spacing: 0;
+}
+
+.post-content h2 {
+  color: $color5;
 }
